--- a/projeto.html
+++ b/projeto.html
@@ -9,23 +9,20 @@
 <body>
 
 <header class="banner">
-    <img class="logo" src="WhatsApp Image 2025-12-08 at 11.12.27.jpeg" alt="logo">
+    <img class="logo" src="logo.jpeg"logo>
 </header>
 
 <main>
 
 <section class="categorias">
-   <a href="projeto.html">Todos</a>
-       <a href="">Lanches</a>
-       <a href="">Pizza</a>
-       <a href="">Bebidas</a>
-       <a href="carrinho.html">Carrinho</a>
+   <a href="projeto.html">Lanches</a>
+    <a href="carrinho.html">Carrinho</a>
 </section>
 
 <section class="produtos">
 
     <div class="card" data-category="lanches">
-        <img src="download.jpeg" alt="hamburguer">
+        <img src="burg.jpeg" alt="hamburguer">
         <div class="card-info">
             <h3>X-Tudo</h3>
             <p>Pão, carne, cebola, salada, queijo, molhos</p>
@@ -39,7 +36,7 @@
     </div>
 
     <div class="card" data-category="pizza">
-        <img src="download (1).jpeg" alt="pizza">
+        <img src="pizza.jpeg" alt="pizza">
         <div class="card-info">
             <h3>Pizza de calabresa</h3>
             <p>Calabresa, mussarela, cebola, molho de tomate</p>
@@ -53,7 +50,7 @@
     </div>
 
     <div class="card" data-category="bebidas">
-        <img src="images.jpeg" alt="coca Cola">
+        <img src="coca.jpeg" alt="coca Cola">
         <div class="card-info">
             <h3>Coca Cola</h3>
             <p>350ml gelado</p>
@@ -82,9 +79,8 @@
             <a href="https://www.instagram.com/021_pachec0_?igsh=aXFqa2djMWkxeWp3" target="_blank">Instagram</a><br>
         </div>
     </div>
-
 </footer>
-<script src="projeto.js">
-</script>
+<script src="projeto.js"></script>
+<div id="toast">Item adicionado ao carrinho!</div>
 </body>
 </html>
