--- a/carrinho.html
+++ b/carrinho.html
@@ -9,14 +9,11 @@
 </head>
 <body>
     <header class="banner">
-    <img class="logo" src="WhatsApp Image 2025-12-08 at 11.12.27.jpeg" alt="logo">
+    <img class="logo" src="logo.jpeg" alt="logo">
 </header>
 <main>
     <section class="categorias">
        <a href="projeto.html">Todos</a>
-       <a href="">Lanches</a>
-       <a href="">Pizza</a>
-       <a href="">Bebidas</a>
        <a href="carrinho.html">Carrinho</a>
     </section>
     <div id="lista-produtos">
